@@ -1,3 +1,7 @@
+2003-10-11  Marcus Brinkmann  <marcus@gnu.org>
+
+	* notify-nosenders.c, notify-stubs.c: Delete obsolete files.
+
 2003-06-11  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>
 	
 	* dir-renamed.c (diskfs_rename_dir): Check permissions to remove
